# rust-boilerplate

./: README.md  flake.nix
boilerplate/: .gitignore  Cargo.toml  Cargo.toml.tmpl  flake.nix  flake.nix.tmpl
boilerplate/crates/core/: Cargo.toml  Cargo.toml.tmpl
boilerplate/crates/core/src/: lib.rs
boilerplate/nix/flake/: default.nix  default.nix.tmpl
boilerplate/nix/outputs/perSystem/: checks.nix  devShells.nix
boilerplate/nix/outputs/perSystem/packages.d/: 00-rust.nix  00-rust.nix.tmpl
nix/outputs/perSystem/: formatter.nix
